--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
            <a href="#" class="logo">nouvil</a>
         </h2>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Product</a></li>
             <li><a href="#">Shop</a></li>
             <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </header>
+    <section>
+
+    </section>
     <script src="main.js"></script>
 </body>
 </html>
