--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </header>
-    <section>
-
+    <section class="main">
+        <img src="images/stars1.png" id="stars">
+        <h2 class="nouvil">nouvil</h2>
+        <img src="images/moon2.png" id="moon">
+        <img src="images/mountains3.png" id="mountains3">
+        <img src="images/mountains4.png" id="mountains4">
+        <img src="images/river5.png" id="river">
+        <img src="images/boat6.png" id="boat">
+        <img src="images/mountains7.png" id="mountains7">
     </section>
     <script src="main.js"></script>
 </body>
