--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <img src="images/boat6.png" id="boat">
         <img src="images/mountains7.png" id="mountains7">
     </section>
+    <div class="content">
+        <h2>Lorem Ipsum is simply dummy text </h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
